feat(app): rework settings and stats
